<resources>
    <string name="app_name">My Applicationm</string>
    <string name="name">cat</string>
    <string name="avatar">Avatar</string>
    <string name="bio">
        The cat  is a domestic species of small carnivorous mammal. \n
        It is the only domesticated species in the family Felidae and is commonly
        referred to as the domestic cat or house cat to distinguish it from the
        wild members of the family.
        Cats are commonly kept as house pets but can also be farm cats or feral cats; the
        feral cat ranges freely and avoids human contact.
        Domestic cats are valued by humans for companionship and their ability to kill rodents.
        About 60 cat breeds are recognized by various cat registries.


    </string>
    <string name="what_is">what is its scientific name</string>
    <string name="done">Done</string>
</resources>